--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.nayan.rssrecipe">
+    package="com.bdsob.recipes">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.bdsob.recipes.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -25,7 +25,7 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".DetailsActivity">
+        <activity android:name="com.bdsob.recipes.DetailsActivity">
         </activity>
 
      <!--  <receiver android:name="com.example.nayan.rssrecipe.NetworkChangeReceiver" >
